Open the link below asap, it has something for you.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Special Question... ❤️</title>
+    <title> Open the link below asap </title>
     <style>
         :root {
             --primary-pink: #ff4d6d;
